# CppShenanigans

./: .gitignore  README.md
bgl_tests/: CMakeLists.txt  bgl_test.cpp  iostream_deque_test.cpp  iostream_test.cpp
buffer_tests/: .clang-format  CMakeLists.txt  buffer_test.cpp  hton_ntoh_test.cpp
ctors/: CMakeLists.txt  deleted_ctor_test.cpp  derived_copy_ctor_test.cpp
references/: CMakeLists.txt  return_ref.cpp
templates_and_inheritance/: CMakeLists.txt  add_class_template_param.cpp  add_function_template_param.cpp  base_final.cpp
